# sample_rocket_web_app

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  dockerfile
migrations/0001_confessions/: down.sql  up.sql
site/static/: confessions.js  styles.css
src/: errors.rs  main.rs  models.rs  schema.rs
templates/: index.html
